--- a/Develop/style.css
+++ b/Develop/style.css
@@ -42,7 +42,7 @@ textarea {
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: green;
 }
 
 .saveBtn {
@@ -56,4 +56,25 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+/*Media Query*/
+
+@media screen and (max-width: 768px), screen and (max-width:575px){
+  .row{
+    height:auto;
+    margin-top: 20px;
+  }
+  .hour{
+    padding-right: 20%;
+  }
+  .saveBtn{
+    border: 0;
+    border-radius:.25rem;
+    height: 50px;
+  }
+  textarea{
+    min-height: 85px;
+    border: 0;
+  }
 }
